# rivulet

./: .envrc  .gitignore  .watchmanconfig  Cargo.toml  Procfile  README.md  Taskfile.yml
dev-cargo-build/: Cargo.toml
dev-cargo-build/src/: main_.rs
dev-nix-init/: flake.nix
dev-nix-shell/: flake.nix
dev-nix-shell/curl/: flake.nix
dev-nix-shell/fd/: flake.nix
dev-nix-shell/overmind/: flake.nix
dev-nix-shell/task/: flake.nix
dev-nix-shell/watchman/: flake.nix
dev-task/: cargo.yml  tmpfs.yml  watchman.yml
dev-watchman-client/: Cargo.toml
dev-watchman-client/src/: main_.rs
exe-tech/: Cargo.toml  Taskfile.yml
exe-tech/src/: main_.rs  mod.rs
lib-hex-rs/: Cargo.toml
