[package]
name = "rivulet-dev-watchman-client"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rivulet-dev-watchman-client"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
watchman_client = { workspace = true }

[lints]
workspace = true
